@startuml gof_iterator

'Copyright 2026 Takayoshi Matsuyama
'
'Licensed under the Apache License, Version 2.0 (the "License");
'you may not use this file except in compliance with the License.
'You may obtain a copy of the License at
'
'    http://www.apache.org/licenses/LICENSE-2.0
'
'Unless required by applicable law or agreed to in writing, software
'distributed under the License is distributed on an "AS IS" BASIS,
'WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
'See the License for the specific language governing permissions and
'limitations under the License.

title GoF - Behavioral #04 - Iterator

interface Aggregate {
    +create_iterator()
}

class ConcreteAggregate {
    +create_iterator()
}

Aggregate <|.. ConcreteAggregate

interface Iterator {
    +first()
    +next()
    +is_done()
    +current_item()
}

note right of Iterator::first
    sets current to the first item
end note
note right of Iterator::next
    advances current to the next item
end note
note right of Iterator::is_done
    returns true if current is beyond the end of the collection
end note
note right of Iterator::current_item
    returns the current item
end note

class ConcreteIterator {
    -aggregate : ConcreteAggregate
    -current : int
    +first()
    +next()
    +is_done()
    +current_item()
}

Iterator <|.. ConcreteIterator

ConcreteAggregate ..> ConcreteIterator
ConcreteIterator --> ConcreteAggregate

@enduml
